log
Sat 27 Apr 2024 01:11:25 AM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
4a3e47b
Sat 27 Apr 2024 01:24:01 AM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
999549d
Sat 27 Apr 2024 04:04:55 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1b7aec1
Sat 27 Apr 2024 05:11:02 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
4baa6a0
Sat 27 Apr 2024 05:26:25 PM UTC: 
 hashmap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
 tests:  0|0
d26368a
Sat 27 Apr 2024 05:31:55 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
9ba8096
Sat 27 Apr 2024 05:34:35 PM UTC: 
 hashmap.c | 21 ++++++---------------
 1 file changed, 6 insertions(+), 15 deletions(-)
 tests:  0|0
f9a44b5
Sat 27 Apr 2024 06:02:56 PM UTC: 
 hashmap.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 30/70
c35fa7b
Sun 28 Apr 2024 07:49:58 PM UTC: 
 hashmap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  6|4
total_score: 30/70
3e6c3da
Sun 28 Apr 2024 07:53:07 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
28770b2
Sun 28 Apr 2024 07:59:14 PM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
6dab051
Sun 28 Apr 2024 07:59:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
cfe40f5
Sun 28 Apr 2024 08:02:51 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
f3c415a
Sun 28 Apr 2024 08:10:25 PM UTC: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 30/70
aecc4dd
Sun 28 Apr 2024 08:47:21 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
5eb41c6
Sun 28 Apr 2024 09:06:14 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 40/70
8324690
Sun 28 Apr 2024 09:06:48 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
cec23bf
Sun 28 Apr 2024 09:07:23 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
9c128ff
Sun 28 Apr 2024 09:07:35 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 40/70
9718d04
Sun 28 Apr 2024 09:41:02 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
afc8334
Sun 28 Apr 2024 09:41:33 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
689975d
Sun 28 Apr 2024 09:50:58 PM UTC: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
e0a7993
Sun 28 Apr 2024 09:51:16 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
99feb73
Sun 28 Apr 2024 09:52:18 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
09030b5
Sun 28 Apr 2024 09:55:53 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
21d9f2a
Sun 28 Apr 2024 09:56:23 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
af8efd9
Sun 28 Apr 2024 10:07:25 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:113:1: error: control reaches end of non-void function [-Werror=return-type]
  113 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cd9f609
Sun 28 Apr 2024 10:07:56 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|2
total_score: 50/70
e2ac71e
Sun 28 Apr 2024 10:09:56 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
12b5344
Sun 28 Apr 2024 10:12:28 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
f2d447e
Sun 28 Apr 2024 10:12:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
78c699e
Sun 28 Apr 2024 10:28:38 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
dffd77b
Sun 28 Apr 2024 10:42:40 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
392a4e5
Sun 28 Apr 2024 10:43:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
152248a
Sun 28 Apr 2024 10:46:00 PM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
hashmap.c:74:1: error: expected identifier or ‘(’ before ‘}’ token
   74 | }
      | ^
Compilation failed
6c07162
Sun 28 Apr 2024 10:46:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2ad55bd
Sun 28 Apr 2024 10:50:51 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
57de910
Sun 28 Apr 2024 11:36:04 PM UTC: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  0|0
77bf99b
Sun 28 Apr 2024 11:38:16 PM UTC: 
 hashmap.c | 24 +++++++++++++++---------
 1 file changed, 15 insertions(+), 9 deletions(-)
 tests:  0|0
8371dd4
Sun 28 Apr 2024 11:38:35 PM UTC: 
 hashmap.c | 24 +++++++++---------------
 1 file changed, 9 insertions(+), 15 deletions(-)
 tests:  0|0
aadf8a4
Sun 28 Apr 2024 11:39:08 PM UTC: 
 hashmap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|0
95efb80
Sun 28 Apr 2024 11:41:00 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
35a95c5
Sun 28 Apr 2024 11:42:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f1118f0
Sun 28 Apr 2024 11:42:57 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:68:42: error: ‘*aux’ is a pointer; did you mean to use ‘->’?
   68 |                 if (aux[i] != NULL && aux->key != NULL) {
      |                                          ^~
      |                                          ->
Compilation failed
b60a1b9
Sun 28 Apr 2024 11:43:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d9b700b
Mon 29 Apr 2024 01:29:55 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ef523cf
